[package]
name = "rustjson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.3"
actix-files = "0.6.2"

async-graphql = "4.0.15"
async-graphql-actix-web = "4.0.15"

serde = "1.0.145"
serde_json = "1.0.86"
serde-aux = "4.0.0"

cached = "0.39.0"
tokio = { version = "1.21.2", features = ["fs"] }
lazy_static = "1.4.0"